[gd_scene load_steps=3 format=3 uid="uid://cos1xibhmi6b8"]

[ext_resource type="Script" uid="uid://mthwl24gv7kr" path="res://content/pronoun/pronoun.gd" id="1_d4g2u"]
[ext_resource type="Theme" uid="uid://jtkek1w5hnou" path="res://main/theme.tres" id="2_6h5rd"]

[node name="Pronoun" type="HFlowContainer"]
offset_right = 360.0
offset_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
script = ExtResource("1_d4g2u")

[node name="OQuesion" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = "II. — Пост: "

[node name="Category" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = "разряд?"
flat = true

[node name="LilSep" type="Label" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = ", "

[node name="Person" type="Button" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = "лицо?"
flat = true

[node name="Separator" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = "; "

[node name="Separator2" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = "непост: "

[node name="Case" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = "падеж?"
flat = true

[node name="LilSep2" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = ", "

[node name="Number" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = "число?"
flat = true

[node name="LilSep3" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = ", "

[node name="Gend" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_6h5rd")
text = "род?"
flat = true

[connection signal="pressed" from="Category" to="." method="_on_category_pressed"]
[connection signal="pressed" from="Person" to="." method="_on_person_pressed"]
[connection signal="pressed" from="Case" to="." method="_on_case_pressed"]
[connection signal="pressed" from="Number" to="." method="_on_number_pressed"]
[connection signal="pressed" from="Gend" to="." method="_on_gend_pressed"]
